src/main/webapp/css/vcr.scss
@import 'CLARIN';

/* global variables */
$iconsize: 12px;

@import 'mixins';
@import 'toggleborder';
/*@import 'table';*/
@import 'collectiondetails';
@import 'details';
@import 'feedback';
@import 'filterform';
@import 'vcr_footer';

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local("Roboto Regular"), local("Roboto-Regular"), url("Roboto_with_European_character_sets.woff") format("woff");
}

$font-size-base: 14px;

html, body {
    height: 100%
}

body {
    font-size: $font-size-base;
    font-family: "Roboto", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: #222222;
    word-wrap: break-word;
}

input.max-width {
    width: 100%;
}

.cb {
    margin: 1px;
}

.required {
    font-weight: bold;
}

.row-spacing {
    margin-top: 2px;
    margin-bottom: 2px;
}

noscript {
    margin: 0 auto;
    padding: 0;
    width: 1024px;
}

.tooltip-inner {
    max-width: 300px;
    width: 300px;
    text-align: justify;
}

#noscript-warning {
    color: #FFFFFF;
    background-color: #AE0000;
    font-size: 13px;
    font-weight: bold;
    text-align: center;
    line-height: 24px;
    margin: 0 auto;
    padding: 0;
    text-align: center;
    vertical-align: middle;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 101;
}

div.navbar div.container {
    overflow: hidden; /* Fixes issue with 1px causing vertical scrollbar to show in navbar */
}

#content {
    min-height: 100%;
    margin-bottom: -211px;
    padding-bottom: 221px; /* compensate margin and add an extra 10px */
}

.hidden-overflow {
    overflow: hidden;
}

.tooltipparent .tooltipcontent {
    display: none;
}

.navbar-collapse {
    font-size: 120%;
}

a.navbar-brand {
    line-height: 20px;
    font-size: 18px;
}

ul#CLARIN_header_right li.authenticated {
    text-shadow: none;
    padding-top: 15px;
    color: #000;
    font-size: 120%;
}

div#CLARIN_footer_middle img {
    max-height: 80px !important;
    padding: 6px 4px;
}

div#help  {

    dd {
        /* indent for the definitions on the help page */
        margin-left: 2em;
    }
}

div.betabadge {
    position: relative;

    span {
        display: block;
        position: absolute;
        left: 1em;
        top: 1em;
        color: black;
        font-size: larger;
        background: red;
        opacity: .7;
        padding: .2em .4em;
    }
}

#aboutlogos img {
    max-height: 6em;
    margin: 1em;
}

.hide {
    display: none;
}

.show {
    display: block;
}

.hint {
    position: absolute;
    z-index: 999;
    margin-top: -4px;
    margin-left: 10px;
    border: 1px solid #c93;
    padding: 12px 12px;
    background-color: #ffc;
    display: none;
    max-width: 35%;
}

.hint .notch {
    position: absolute;
    top: 5px;
    left: -10px;
    margin: 0;
    border-top: 10px solid transparent;
    border-left: 0;
    border-right: 10px solid #ffc;
    border-bottom: 10px solid transparent;
    padding: 0;
    width: 0;
    height: 0;
    /* ie6 height fix */
    font-size: 0;
    line-height: 0;
     /* ie6 transparent fix */
    _border-right-color: pink;
    _border-left-color: pink;
    _filter: chroma(color=pink);
}

.hint .border-notch { border-right-color: #c93; left: -11px; }

.hint-container {
    display: inline-block;
}

.hint-container > input[type=text],textarea {
    width: 100%
}

.half-width {
    width: 50%;
}


.detais {
    font-size: 0.95em;
}

.state {
    min-width: 85px;
    max-width: 85px;
    font-size: 0.9em;
}

td.type {
    min-width: 85px;
    max-width: 85px;
    font-size: 0.9em;
}

td.actions {
    min-width: 80px;
    max-width: 80px;
    width: 80px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

div.actions {    
    text-align: left;
}

.created {
    min-width: 85px;
    max-width: 85px;
    font-size: 0.9em;
}

.action {
    min-width: 90px;
    max-width: 90px;
}




.odd {
    background-color: rgb(234, 234, 234);;/*#D4DEEF;*/
}

.even {
    background-color: #FFFFFF;
}


.btngroup-spacing {
    margin-top: 2px;
    margin-bottom: 2px;
}






a.btn-primary {
    color: #fff;
}







.pid-label {
    border: 1px solid;
    border-color: #0080aa;
    border-radius: 4px;
    white-space: nowrap;
    margin-right: .3em;
    background: #0080aa;
}

.pid-label .pid-label-badge {
    padding: 0 .5em;
    background: #0080aa;
    color: #fff;
    font-family: 'Source Sans Pro', sans-serif;
}

td.reference div div {
    padding-top: 3px;
    padding-bottom: 3px;
}

.details-header {
    padding: 5px;
}





.normal-font {
    
}



.panel-heading a:after {
    font-family:'Glyphicons Halflings';
    content:"\e114";
    float: right;
    color: grey;
}
.panel-heading a.collapsed:after {
    content:"\e080";
}

.hover {
    cursor: pointer;
}








a>.panel-heading:after {
    font-family:'Glyphicons Halflings';
    content:"\e114";
    float: right;
    color: grey;
}
a.collapsed>.panel-heading:after {
    content:"\e080";
}
.panel-default>a>.panel-heading {
    color: #333;
    background-color: #f5f5f5;
    border-color: #ddd;
}

label.filter {
    font-size: 0.9em;
}

select.filter {
    width: 100%;
    font-size: 0.9em;
}

input.filter {
    width: 100%;
    font-size: 0.9em;
}

.hover:hover {
    text-decoration: underline; 
} 

h4.pnl-title {
    display: inline
}

h3.pnl-title {
    display: inline
}

